# LLSS-MPC

./: Dockerfile  README.md  calculate_cost_mask.py  calculate_cost_mask_offline_without_sop.py  calculate_cost_replicated.py  calculate_cost_shamir_10.py  calculate_cost_shamir_10_offline.py  calculate_cost_shamir_3.py  calculate_cost_shamir_3_offline.py  calculate_diff_weak.py  compile_all.py  render_mse.py  render_nn.py  setup_libote.sh
BaselineCircuits/Masked/: int_add32_depth.txt
BaselineCircuits/RSS/: float_add32_depth.txt  int_add32_size.txt
BaselineCircuits/Shamir/10/: aes_128.txt  float_mul32_depth.txt  mse.txt
BaselineCircuits/Shamir/3/: int_mul32_depth.txt
Circuits/: mse.txt
OptimizedCircuits/Masked/: float_mul32_depth.txt
OptimizedCircuits/RSS/: int_add32_depth.txt  int_add32_size.txt  mse.txt
OptimizedCircuits/Shamir/10/: aes_128.txt  float_mul32_depth.txt
OptimizedCircuits/Shamir/3/: float_add32_depth.txt  int_mul32_depth.txt
OptimizedCircuits/Weak/: aes_128.txt  float_add32_depth.txt  float_mul32_depth.txt  int_add32_depth.txt  int_mul32_depth.txt  mse.txt
Protocols/: CMakeLists.txt  bench_baseline.sh  bench_optimized.sh  benchmark.sh  launch_p0.sh  launch_p1.sh  launch_p2.sh  main_protocol.cpp  main_protocol.h  network.py  test_baseline.sh  test_optimized.sh
Protocols/Outputs/: 0.txt  1.txt  2.txt
Protocols/Protocols/: AbyParty.h  AstraHelper.h  AstraParty.cpp  AstraParty.h  Domain.h  MaskedParty.h  MaskedProtocol.h  Protocol.h  ProtocolDefinitions.h  RSSParty.h
ShareAssigner/: CMakeLists.txt  backup.ini  build.sh  build_debug.sh  kahypar_config.ini  main_optimizer.cpp  visualize.sh
ShareAssigner/dotFiles/: 0.dot  1.dot  2.dot  faulty_sharing.dot  in.dot
ShareAssigner/outputs/: FP-i2f.bristol_FullDepthBoolean.yaml_optimized.txt  FP-mul.bristol_FullDepthBoolean.yaml_optimized.txt  add-depth-op.txt  aes_depth_opt.txt  int_add32_depth.bristol_FullDepthBoolean.yaml_optimized.txt  int_add32_size.bristol_FullDepthBoolean.yaml_optimized.txt  int_div32_depth.bristol_FullDepthBoolean.yaml_optimized.txt  out.txt  out2.txt  regression-depth.txt
delayedresharing/: CMakeLists.txt  Delayedresharing.cpp  Delayedresharing.h
delayedresharing/GeneralizedTerms/: Definitions.cpp  Definitions.h  GeneralizedTerm.cpp  GeneralizedTerm.h  GeneralizedTermNetwork.cpp  GeneralizedTermNetwork.h  HyperGraph.h  Operation.cpp  Ring.h  Serialization.cpp  Symbol.cpp  Symbol.h  Util.cpp
delayedresharing/Metrics/: AnalyticalTwoPCCostModel.cpp  CostModel.cpp  CostModel.h  Metric.h
delayedresharing/Metrics/CommunicationMetric/: CommunicationMetric.h  OfflineCommunicationMetric.cpp  OnlineCommunicationMetric.cpp
delayedresharing/Metrics/CompositeMetric/: CompositeMetric.cpp  CompositeMetric.h
delayedresharing/Metrics/ComputationMetric/: ComputationMetric.h  OfflineComputationMetric.cpp  OnlineComputationMetric.cpp
delayedresharing/Metrics/DepthMetric/: DepthMetric.h  OfflineDepthMetric.cpp  OnlineDepthMetric.cpp
delayedresharing/Metrics/SizeMetric/: SizeMetric.h
delayedresharing/Optimizations/: Ensemble.cpp  Ensemble.h  OptimizationPass.h  Partition.cpp  Partition.h  SequentialComposition.h
delayedresharing/Optimizations/General/: ConstantFolding.h
delayedresharing/Optimizations/ShareAssignment/: AstraShareAssignment.cpp  BoundaryParallelShareAssignment.cpp  BoundaryShareAssignment.cpp  GreedyShareAssignment.cpp  OfflineBoundaryShareAssignment.cpp  PlainShareAssignment.cpp  ShareAssignment.h
